--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>متن وسط چین</title>
+    <title>بستنی سارا</title>
     <style>
         body {
             display: flex;
-            align-items: flex-start; /* برای قرار گرفتن در بالای صفحه */
-            justify-content: center; /* برای وسط چین کردن */
-            height: 100vh; /* ارتفاع 100% برای پوشش کل صفحه */
-            margin: 0; /* حذف حاشیه‌های پیش‌فرض */
+            align-items: flex-start; 
+            justify-content: center; 
+            height: 100vh; 
+            margin: 0; 
         }
         h1 {
-            text-align: center; /* وسط چین کردن متن */
+            text-align: center; 
         }
     </style>
 </head>
 <body>
     <h1>bastani sara comming soon . . . </h1>
-	<img src="site.JPG" alt="در دست ساخت بستنی سارا" width="1520" height="800">
+	<img src="site.JPG" alt="در دست ساخت بستنی سارا" width="300" height="200">
 </body>
 </html>
