--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="fa">
 <head>
@@ -12,14 +11,21 @@
             justify-content: center; 
             height: 100vh; 
             margin: 0; 
+            flex-direction: column; 
         }
         h1 {
             text-align: center; 
+            margin-bottom: 20px; 
+        }
+        img {
+            max-width: 100%; 
+            height: auto; 
+            max-height: 70vh; 
         }
     </style>
 </head>
 <body>
     <h1>bastani sara comming soon . . . </h1>
-	<img src="site.JPG" alt="در دست ساخت بستنی سارا" width="300" height="200">
+    <img src="site.JPG" alt="در دست ساخت بستنی سارا">
 </body>
 </html>
