--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </style>
 </head>
 <body>
-    <h1>bastani sara comming soon . . . </h1>
+    <h1>bastani sara coming soon . . . </h1>
     <img src="site.JPG" alt="در دست ساخت بستنی سارا">
 </body>
 </html>
