--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             display: flex;
-            align-items: flex-start; 
+            align-items: center; 
             justify-content: center; 
             height: 100vh; 
             margin: 0; 
@@ -15,7 +15,7 @@
         }
         h1 {
             text-align: center; 
-            margin-bottom: 20px; 
+            margin: 0; 
         }
         img {
             max-width: 100%; 
